Hadoop YARN Change Log

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    YARN-4287. Capacity Scheduler: Rack Locality improvement. (Nathan Roberts via wangda)

    YARN-4492. Add documentation for preemption supported in Capacity
    scheduler (Naganarasimha G R via jlowe)

  OPTIMIZATIONS

  BUG FIXES

    YARN-4326. Fix TestDistributedShell timeout as AHS in MiniYarnCluster no longer 
    binds to default port 8188. (Meng Ding via wangda)

    YARN-4347. Resource manager fails with Null pointer exception. (Jian He via wangda)

    YARN-4374. RM capacity scheduler UI rounds user limit factor (Chang Li via
    jlowe)

    YARN-3849. Too much of preemption activity causing continuos killing of containers 
    across queues. (Sunil G via wangda)

    YARN-3769. Consider user limit when calculating total pending resource for 
    preemption policy in Capacity Scheduler. (Eric Payne via wangda)

    YARN-4344. NMs reconnecting with changed capabilities can lead to wrong
    cluster resource calculations (Varun Vasudev via jlowe)

    YARN-4365. FileSystemNodeLabelStore should check for root dir existence on
    startup (Kuhu Shukla via jlowe)

    YARN-4380. TestResourceLocalizationService.testDownloadingResourcesOnContainerKill
    fails intermittently. (Varun Saxena via ozawa)

    YARN-4398. Remove unnecessary synchronization in RMStateStore. (Ning Ding via jianhe)

    YARN-3840. Resource Manager web ui issue when sorting application by id
    (with application having id > 9999) （Mohammad Shahid Khan & Varun Saxena
    via jianhe)

    YARN-4422. Generic AHS sometimes doesn't show started, node, or logs on App page
    (Eric Payne via jeagles)

    YARN-4439. Clarify NMContainerStatus#toString method. (Jian He via xgong)

    YARN-4452. NPE when submit Unmanaged application. (Naganarasimha G R via
    junping_du)

    YARN-4546. ResourceManager crash due to scheduling opportunity overflow.
    (Jason Lowe via junping_du)
